# Dimploma_thesis

./: .gitignore  dp.docx  readme.md  ~$dp.docx
examples/: Cargo.toml
examples/.cargo/: config.toml
examples/b01_camera_plugin/: cargo.toml
examples/b01_camera_plugin/src/: lib.rs
examples/b02_ecs_inspector/: Cargo.toml
examples/b02_ecs_inspector/src/: main.rs
examples/b03_performance_test/: Cargo.toml
examples/b03_performance_test/src/: main.rs
examples/p00_window/: Cargo.toml
examples/p00_window/src/: main.rs
examples/p01_basic_triangle/: Cargo.toml
examples/p01_basic_triangle/assets/: shader.wgsl
examples/p01_basic_triangle/src/: main.rs
examples/p02_uniform_buffer/: Cargo.toml
examples/p02_uniform_buffer/assets/: shader.wgsl
examples/p02_uniform_buffer/src/: main.rs
examples/p03_geometry/: Cargo.toml
examples/p03_geometry/src/: main.rs
examples/p04_textures/: Cargo.toml
examples/p04_textures/src/: main.rs
examples/p04b_textures/: Cargo.toml
examples/p04b_textures/assets/: shader.wgsl
examples/p04b_textures/src/: main.rs
examples/p05_camera/: Cargo.toml
examples/p05_camera/src/: main.rs
examples/p06_obj/: Cargo.toml
examples/p06_obj/src/: main.rs
examples/p08_light/: Cargo.toml
examples/p08_light/assets/: shader.wgsl
examples/p08_light/src/: main.rs
examples/p10a_compute_shader/: Cargo.toml
examples/p10a_compute_shader/assets/: shader.wgsl
examples/p10b_compute_shader/: Cargo.toml
examples/p12_multiple_shaders/: Cargo.toml
examples/p13_post_processing/: Cargo.toml
examples/testing/: Cargo.toml
(+19 files in other folders)
